--- a/index.html
+++ b/index.html
@@ -4,29 +4,28 @@
 <head>
 	<title>Snake</title>
 
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=0;">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
 	<link href="css/style.css" rel="stylesheet" type="text/css" media="screen" />
-	
-	<!--[if lt IE 9]><script src="js/html5.js"></script><![endif]-->
-
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-	<script type="text/javascript">if (typeof jQuery == 'undefined') {document.write(unescape("%3Cscript src='js/jquery-1.8.2.min.js' type='text/javascript'%3E%3C/script%3E"));}</script>
-		
-	<script src="js/scripting.js"></script>
-	
+    <script data-main="app" src="js/libs/require.js"></script>
 </head>  
 
-<body> 
+<body>
  
 	<div id="field">
-		<div id="snake"></div>
-	</div>	
-	
-	<div id="score">0</div>
+        <div id="snake"></div>
+        <div id="food"></div>
+	</div>
 
-</body>  
-</html>  
+    <div id="ui">
+        <p>Your latest score is <span id="score">0</span></p>
+        <a id="start" href="#">start</a>
+
+        <p>_arrow_keys_ - control;</p>
+        <p>_space_ - pause;</p>
+
+        <p>tip: resize your browser to pick the field size</p>
+
+        <!-- todo difficulty + cellsize -->
+    </div>
+
+</body>
+</html>
